--- a/style.css
+++ b/style.css
@@ -250,7 +250,7 @@ footer{
 }
 
 
-#colour img, #typography img, #iconography img, #graphics img, #type_rules img {
+#colour img, #typography img, #graphics img, #type_rules img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -404,10 +404,17 @@ h1 {
 
 
 #icon_left {
-    display: flex;
+    flex-direction: row;
     width: 30%;
     margin-left: 60px;
     margin-right: 100px;
+}
+
+#iconography img {
+    width: 50%;
+    object-fit: cover;
+    overflow: hidden;
+    margin: 5px;
 }
 
 #icon_right {
